# dwm

./: .gitignore  Makefile  README.md  bar.h  config.def.h  config.def.h.orig  config.h  dwm.c  dwm.c.orig  statusallmons.diff
bar/: Cargo.toml  bar_script.sh
bar/src/: config.rs  lib.rs  main.rs
bar/src/modules/: idena.rs  mod.rs  time.rs
