[package]
name = "bar"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
idena_api = { path = "/home/josh/programming/rust/idena_api" }  # { git = "https://github.com/eggmund/idena_api" }
tokio = { version = "0.2", features = ["macros"] }
binance = "0.10"